# curvyzero

./: .gitignore  README.md  curvytron_muzero_modal_handoff.md  goal.md  pyproject.toml
docs/: README.md  investigation_plan.md
scripts/: analyze_curvytron_212_recommendations.py  analyze_curvytron_cz26_contrasts.py  analyze_curvytron_cz26_deep_report.py  analyze_curvytron_cz26_grid.py  analyze_curvytron_eval_curves.py  analyze_curvytron_mixture_status.py  analyze_dummy_survival_checkpoints.py  audit_curvytron_checkpoint_anchor_policy.py  audit_curvytron_launch_manifest_refs.py  audit_curvytron_wave_a_capacity.py  audit_curvytron_wave_a_launch_packet.py  audit_lightzero_dummy_pong_target_policy.py  benchmark_compact_tensor_native_unroll2_replay.py  benchmark_curvytron_visual_observation.py  benchmark_debug_visual_lightzero_adapter.py  benchmark_env.py  benchmark_lightzero_ctree_no_model.py  benchmark_policy_search_batch_standin.py  benchmark_render_lane_microbench.py  benchmark_selfplay_batch_bridge.py  benchmark_selfplay_parallel_bridge.py  benchmark_source_env.py  benchmark_source_fidelity.py  benchmark_source_trainer_actor_loop_profile.py  benchmark_vector_actor_loop_bridge.py  benchmark_vector_array_steps.py  benchmark_vector_batch_rows.py  benchmark_vector_fixed_action_tape.py  benchmark_vector_obs_reward_packing.py  benchmark_vector_trainer_actor_loop_profile.py  benchmark_vectorization_prototype.py  build_compact_borrowed_actor_decision.py  build_compact_coach_compatibility_speed_row_refresh.py  build_compact_coach_speed_row_smoke.py  (+104 more)
tools/: fidelity_diff.py  (+2 more)
(+1796 files in other folders)
