[project]
name = "curvyzero"
version = "0.1.0"
description = "Deterministic CurvyTron-like environment and RL/MuZero training experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
modal = [
  "modal>=1.4,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["curvyzero*"]

[tool.ruff]
line-length = 100
target-version = "py311"
